--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
           <li><a href="https://meoo.localiza.com"><button>MEOO</button></a></li>
           <li><a href="https://zarp.localiza.com"><button>ZARP</button></a></li>
 
-          <button>MINHAS RESERVAS</button>
-          <button>LOGIN</button>
-
+          <a href="https://www.localiza.com/brasil/pt-br/reservas/consultar"><button>MINHAS RESERVAS</button></a>
+          <a href="https://www.localiza.com/brasil/pt-br/login?returnUrl=%2Fbrasil%2Fpt-br%2Fgrupos-de-carros"><button>LOGIN</button></a>
         </ul>
       </nav>
 
@@ -58,7 +57,7 @@
           <div class="card-content">
             <h3>Grupo VD - Pick-up Luxo 4x4 Diesel</h3>
             <p>Veículo similar a:Fiat Toro 2.0 4x4 Turbo, dentre outros.</p>
-            <button type="button">Reserve Agora</button>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>
           </div>
         </div>
         <div class="card-item">
@@ -66,7 +65,7 @@
           <div class="card-content">
             <h3>Grupo SV - Suv Elite A Diesel</h3>
             <p>Veículo similiar a: Mitsubishi Pejero 2.4, dentre outros.</p>
-            <button type="button">Reserve Agora</button>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>
           </div>
         </div>
         <div class="card-item">
@@ -75,7 +74,7 @@
             <h3>Grupo LK - Executivo Fast</h3>
             <p>Veículo similiar a: Toyota Corolla GLI FAST,GM CRUZE Sedan FAST, Chery Arrizo 6 1.5 Turbo FAST, dentre
               outros.</p>
-            <button type="button">Reserve Agora</button>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>
           </div>
         </div>
         <div class="card-item">
@@ -84,7 +83,7 @@
             <h3>Grupo LE - Suv Especial</h3>
             <p>Veículo similiar a: Jeep Compass 1.3 Turbo, Chery Tiggo 7 1.6 Turbo, Toyota Corolla Cross 2.0, dentre
               outro.</p>
-            <button type="button">Reserve Agora</button>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>
           </div>
         </div>
         <div class="card-item">
@@ -92,7 +91,7 @@
           <div class="card-content">
             <h3>Grupo BK - Compacto Com Ar Fast</h3>
             <p>Veículo similiar a: Fiat Mobi 1.0. Fiat Uno 1.0, Renault Kwid 1.0, dentre outros.</p>
-            <button type="button">Reserve Agora</button>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>>
           </div>
         </div>
         <div class="card-item">
@@ -100,7 +99,7 @@
           <div class="card-content">
             <h3>Grupo CK- Econômico Especial C/ar Fast</h3>
             <p>Veículo similiar a: Fiat Argo 1.0 FAST, Hyndai HB20 Fiat 1.0 FAST, GM Onix 1.0 FAST, dentre outros.</p>
-            <button type="button">Reserve Agora</button>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>
           </div>
         </div>
         <div class="card-item">
@@ -109,7 +108,7 @@
             <h3>Grupo FW - Intermediário Automático Fast</h3>
             <p>Veículo similiar a: Peugeot 208 Hatch 1.6 FAST, Fiat Cronos 1.8 FAST, GM Onix Plus 1.0 Turbo FAST, dentre
               outros.</p>
-            <button type="button">Reserve Agora</button>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>
           </div>
         </div>
         <div class="card-item">
@@ -117,7 +116,7 @@
           <div class="card-content">
             <h3>Grupo G - SUV</h3>
             <p>Veículo similiar a: Renault Duster 1.6, Ford Ecosport 1.6, dentre outros.</p>
-            <button type="button">Reserve Agora</button>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>
           </div>
         </div>
         <div class="card-item">
@@ -125,7 +124,7 @@
           <div class="card-content">
             <h3>Grupo GX - Suv Automático</h3>
             <p>Veículo similiar a: Jeep Renegade 1.8, VWT T-Cross 1.0, Turbo, GM Tracker 1.4 Turbo, dentre outros.</p>
-            <button type="button">Reserve Agora</button>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>
           </div>
         </div>
       </div>
