--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p>As melhores condições para você reservar e aproveitar</p>
       </div>
       <div class="filter-card">
-        <input type="text" class="search-input" placeholder="Encontre o carro perfeito para sua jornada!" />
+        <input type="text" class="search-input" placeholder="Localiza Fast - Retire seu carro sem enfrentar filas!" />
         <button class="search-button">Buscar</button>
 
       </div>
@@ -91,7 +91,7 @@
           <div class="card-content">
             <h3>Grupo BK - Compacto Com Ar Fast</h3>
             <p>Veículo similiar a: Fiat Mobi 1.0. Fiat Uno 1.0, Renault Kwid 1.0, dentre outros.</p>
-            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>>
+            <a href="https://www.localiza.com/brasil/pt-br/grupos-de-carros"><button>Reserve Agora</button></a>
           </div>
         </div>
         <div class="card-item">
