--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="filter-card">
         <input type="text" class="search-input" placeholder="Localiza Fast - Retire seu carro sem enfrentar filas!" />
-        <button class="search-button">Saiba mais</button>
+        <a href="https://cloud.e.localiza.com/fast"><button>Saiba mais!</button></a>
 
       </div>
       <div class="card-wrapper">
