--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
 
-  <title>Localiza&Co</title>
+  <title>Localiza&Co | Artemiza Dev</title>
 </head>
 
 <body>
